# TimeTableVK

./: .gitignore  README.md  pyproject.toml
timeTableVk/: config.py  main.py
timeTableVk/database/: __init__.py  database_load.py
timeTableVk/handlers/: __init__.py  all_timetable.py  back_action.py  eight_classes.py  eleven_classes.py  extension.py  five_classes.py  important.py  menu.py  nine_classes.py  sender.py  seven_classes.py  six_classes.py  sub.py  ten_classes.py  timetable_calls.py  unsub.py
timeTableVk/keyboard/: __init__.py  keyboard.py
timeTableVk/middlewares/: __init__.py  database_check.py  user_mid.py
timeTableVk/senderVk/: img.py  main.py
timeTableVk/utils/: __init__.py  img.py  lang_packet.py
