[tool.poetry]
name = "timetablevk"
version = "0.1.0"
description = ""
authors = ["Vlad Korepov <vlad10game@gmail.com>"]
readme = "README.md"
packages = [{include = "timeTableVk"}]

[tool.poetry.dependencies]
python = ">=3.9 <4"
vkbottle = "^4.3.12"
pillow = "^9.4.0"
aiofile = "^3.8.5"
transliterate = "^1.10.2"
loguru = "^0.6.0"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
