[tool.poetry]
name = "timetablevk"
version = "0.1.3"
description = ""
authors = ["Vlad Korepov <vlad10game@gmail.com>"]
readme = "README.md"
packages = [{include = "timeTableVk"}]

[tool.poetry.dependencies]
python = ">=3.9 <4"
vkbottle = "^4.3.12"
pillow = "^9.5.0"
aiofile = "^3.8.5"
transliterate = "^1.10.2"
loguru = "^0.7.0"
python-dateutil = "^2.8.2"
uvloop = {version = "^0.17.0", markers = "sys_platform == 'linux'"}
aiodns = "^3.0.0"
tinydb = "^4.7.1"
aioschedule = "^0.5.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
